--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 psycopg2-binary = "*"
+django-allauth = "*"
+django-crispy-forms = "*"
+django-allauth-bootstrap = "*"
 
 [dev-packages]
 
